--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@
               <input
                 class="bg-[#16161a] border border-[#7f5af0] placeholder:text-[#7f5af0] focus:border-[#7f5af0] focus:outline-none focus:ring-1 focus:ring-[#7f5af0] p-1 w-3/5 rounded my-3"
                 type="text"
-                id="Object"
+                id="name"
                 name="name"
                 value=""
                 required
-                placeholder="Objet"
+                placeholder="Name"
                 autocomplete="none"
               />
               <textarea
